methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:2: error: not found: value seenBaggle
  return seenBaggle
         ^