methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  return seenBaggle
}